feat: display registered customer details
